--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@ h1 {
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="C:\Users\USER\Desktop\yt web\sd" alt="img">
+          <img src="C:\Users\USER\Desktop\yt web\sd.JPEG" alt="img">
         </div>
       </div>
       <div class="col-right">
